<resources>
    <string name="app_name">Location Reminders</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="authentication_image">Authentication image</string>
    <string name="register">Register</string>
    <string name="login_with_email">Login with email</string>
    <string name="choose_the_authentication_method">Choose the authentication method</string>
    <string name="login_with_google">Login with Google</string>
    <string name="confirm">Confirm</string>
    <string name="my_current_location">My current location</string>
    <string name="geofence_added">Geofence added</string>
    <string name="add_reminder">Add reminder</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="reminder_item_deleted">Reminder item has been deleted</string>
    <string name="reminder_deleted_error">There is an issue with deleting this reminder</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
</resources>
